--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rampui",
+  "name": "tester",
   "private": false,
   "version": "0.0.1",
   "description": "The UI library for effortlessly creating beatiful and responsive admin dashboards in React.",
@@ -15,14 +15,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Randmar/rampui.git"
+    "url": "git+https://github.com/abdullah-randmar/tester.git"
   },
   "author": "Randmar Inc.",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Randmar/rampui/issues"
+    "url": "https://github.com/abdullah-randmar/tester/issues"
   },
-  "homepage": "https://github.com/Randmar/rampui#readme",
+  "homepage": "https://github.com/abdullah-randmar/tester#readme",
   "devDependencies": {
     "@types/react": "^18.2.48",
     "react": "^18.2.0",
@@ -33,6 +33,6 @@
     "react": "^17.0.0"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@Randmar"
+    "registry": "https://npm.pkg.github.com/@abdullah-randmar"
   }
 }
