--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "react": "^17.0.0"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@abdullah-randmar"
+    "registry": "https://npm.pkg.github.com/"
   }
 }
